# remember2

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
memorial/: views.py
remember2/: asgi.py  settings.py  urls.py  wsgi.py
static/: fonts.css  style.css
templates/: index.html
