[tool.poetry]
name = "remember2"
version = "0.1.0"
description = "Remembering Python 2"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
whitenoise = "^5.0.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
