[tool.poetry]
name = "remember2"
version = "0.1.0"
description = "Remembering Python 2"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
django = {extras = ["argon2", "bcrypt"], version = "^3.0.7"}
whitenoise = {extras = ["brotli"], version = "^5.0.1"}
gunicorn = "^20.0.4"
dj_database_url = "^0.5.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
